Fixed alignment

--- a/css/main.css
+++ b/css/main.css
@@ -47,4 +47,11 @@ color:#eee;
 text-decoration:none;
 font-family:'Droid Sans Mono';
 font-size:15px;
+text-align: center;
+}
+
+img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
